--- a/sauna-app/application/templates/reservations/new.html
+++ b/sauna-app/application/templates/reservations/new.html
@@ -3,6 +3,6 @@
 {% block body %}
 <form method="POST" action="{{ url_for('reservations_create') }}">
   <input type="text" name="name"/>
-  <input type="submit" value="Add a new reservation/>
+  <input type="submit" value="Add a new reservation"/>
 </form>
 {% endblock %}
