--- a/sauna-app/application/templates/index.html
+++ b/sauna-app/application/templates/index.html
@@ -1,7 +1,10 @@
 {% extends "layout.html" %} 
 
 {% block body %}
-<p>
-    Hello world!
-</p>
+
+<ul>
+    <li><a href="{{ url_for('reservations_index') }}">List reservations
+    </a></li>
+    <li><a href="{{ url_for('reservations_form') }}">Add a reservation</a></li>
+</ul>
 {% endblock %}
