kirjautuminen yms. lisäykset

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -6,8 +6,22 @@
   </head>
   
   <body>
-    {% block body %}
+    {% if current_user.is_authenticated %}
+    <p>
+      Kirjautunut nimellä {{ current_user.name }}. <a href="{{ url_for('auth_logout') }}"> Kirjaudu ulos </a>
+    </p>
+    {% else %}
+    <a href="{{ url_for('auth_login') }}"> Kirjaudu </a>
+    {% endif %}
 
+    <ul>
+      <li><a href="{{ url_for('reservations_index') }}">List reservations</a></li>
+      <li><a href="{{ url_for('reservations_form') }}">Add a reservation</a></li>
+    </ul>
+    {% block body %}
+    <p>
+      Content.
+    </p>
     {% endblock %}
   </body>
 </html>
