--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,5 +1,23 @@
 {% extends "layout.html" %} 
 
 {% block body %}
+<p>
+    Hello world!
+</p>
+
+{% if needs_reservations is defined %}
+<p>
+    The following users need reservation:
+</p>
+
+<ul>
+    {% for user in needs_reservations %}
+    <li>
+        {{user.id}} {{user.name}}
+    </li>
+    {% endfor %}
+</ul>
+
+{% endif %}
 
 {% endblock %}
