--- a/application/templates/reservations/list.html
+++ b/application/templates/reservations/list.html
@@ -4,18 +4,14 @@
   <table>
     <tr>
       <th>Reservation</th>
-      <th>Done</th>
     </tr>
-    {% for reservation in reservations %}
-    <tr>
-      <td>{{ reservation.name }}</td>
-      <td>{{ reservation.done }}</td>
-      <td>
-        <form method="POST" action="{{ url_for('reservations_set_done', reservation_id=reservation.id) }}">
-          <input type="submit" value="Change status!"/>
-        </form>
-          </td>
-    </tr>
-    {% endfor %}
   </table>
+  {% for reservation in reservations %}
+    <div>
+      {{ reservation.name }}
+    </div>
+  {% endfor %}
+
+  <div> {{ count }} reservations</div>
+
 {% endblock %}
