rekisteröitymisen lisääminen ja turhien juttujen poisto

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -12,7 +12,7 @@
 <ul>
     {% for user in needs_reservations %}
     <li>
-        {{user.id}} {{user.name}}
+        {{user.id}} {{user.username}}
     </li>
     {% endfor %}
 </ul>
