varauksen lisäämisen korjaus

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -7,14 +7,23 @@
         {% for date in future_dates %}
             <div class="row" style="min-height: 100px">
                 <div class="col-12">
-                    {{ date.weekday() }} – {{ date.strftime('%d.%m.') }}
+                    {{ to_fi[date.weekday()] }} – {{ date.strftime('%d.%m.') }}
                 </div>
 
                 <div class="col-12">
                     <form method="POST" action="{{ url_for('reservations_create') }}">
     
-                        {{ form.time.label }}
-                        {{ form.time }}
+                        <label for="hour">
+                            Tunti   
+                            <select name="hour">
+                                {% for hour in range(0, 23) %}
+                                    <option value={{hour}} id="time">{{hour}}</option>
+                                {% endfor %}
+                            </select>
+                        </label>
+
+                        <input type="text" id="date" name="date" value={{date}} hidden>
+
                         <input type="submit" value="Luo varaus"/>
                     </form>
                 </div>
