--- a/application/templates/reservations/list.html
+++ b/application/templates/reservations/list.html
@@ -3,7 +3,7 @@
 {% block body %}
   <table>
     <tr>
-      <th>Reservation</th>
+      <th>Varaukset</th>
     </tr>
   </table>
   {% for reservation in reservations %}
@@ -12,6 +12,6 @@
     </div>
   {% endfor %}
 
-  <div> {{ count }} reservations</div>
+  <div> {{ count }} varausta</div>
 
 {% endblock %}
