--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,35 +1,38 @@
 {% extends "layout.html" %} 
 
 {% block body %}
+<body>
+    <div class="row">
+        <div class="col-6 offset-3">
+            {% for date in future_dates %}
+                <div class="row" style="min-height: 100px">
+                    <div class="col-12">
+                        {{ to_fi[date['date'].weekday()] }} – {{ date['date'].strftime('%d.%m.') }}
+                    </div>
 
-<div class="row">
-    <div class="col-6 offset-3">
-        {% for date in future_dates %}
-            <div class="row" style="min-height: 100px">
-                <div class="col-12">
-                    {{ to_fi[date['date'].weekday()] }} – {{ date['date'].strftime('%d.%m.') }}
+                    <div class="col-12">
+                        <form method="POST" action="{{ url_for('reservations_create') }}">
+                            
+                            <label for="hour">
+                                Tunti   
+                                <select name="hour">
+                                    {% for hour in date['hours'] %}
+                                        <option value={{hour}} id="time">{{hour}}</option>
+                                    {% endfor %}
+                                </select>
+                            </label>
+
+                            <input type="text" id="date" name="date" value={{date['date']}} hidden>
+
+                            <input type="submit" value="Luo varaus"/>
+                        </form>
+                    </div>
                 </div>
-
-                <div class="col-12">
-                    <form method="POST" action="{{ url_for('reservations_create') }}">
-    
-                        <label for="hour">
-                            Tunti   
-                            <select name="hour">
-                                {% for hour in date['hours'] %}
-                                    <option value={{hour}} id="time">{{hour}}</option>
-                                {% endfor %}
-                            </select>
-                        </label>
-
-                        <input type="text" id="date" name="date" value={{date['date']}} hidden>
-
-                        <input type="submit" value="Luo varaus"/>
-                    </form>
-                </div>
-            </div>
-        {% endfor %}
+            {% endfor %}
+        </div>
     </div>
-</div>
+</body>
+
+    
 
 {% endblock %}
