--- a/application/static/styles.css
+++ b/application/static/styles.css
@@ -24,3 +24,16 @@ body {
 .date-row {
     font-size: 1.5em;
 }
+
+.reseravation-action-row {
+    display: inline-flex;
+}
+
+.reservation-list-row {
+    margin-bottom: 15px;
+    padding: 10px;
+}
+
+.reseravation-action-row a {
+    margin-right: 15px;
+}
