--- a/application/templates/reservations/list.html
+++ b/application/templates/reservations/list.html
@@ -3,22 +3,25 @@
 {% block body %}
   <h3>Varaukset</h3>
   {% for reservation in reservations %}
-    <div>
+  <div class="row reservation-list-row">
+    <div class="col-12">
       {{ reservation.date.strftime('%d.%m.') }} klo {{ reservation.hour }}-{{ reservation.hour + 1 }}, varaaja {{ reservation.household }}
     </div>
-    {% if reservation.date in date %}
 
-    <td>
-      <a href="{{ url_for('reservations_edit', reservation_id=reservation.id) }}">
-        <i class="fas fa-pencil-alt"></i> 
-      </a> 
-    </td> 
-    <td>
-      <form method="POST" action="{{ url_for('reservations_delete', reservation_id=reservation.id) }}">
-        <input type="submit" value="Poista"></input> <i class="fa fa-trash"></i>
-      </form>  
-    </td> 
-    {% endif %}
+    <div class="col-12">
+      <div class="col-1 reseravation-action-row">
+        <a href="{{ url_for('reservations_edit', reservation_id=reservation.id) }}">
+          <i class="fas fa-pencil-alt fa-2x"></i>
+        </a> 
+
+
+        <form method="POST" action="{{ url_for('reservations_delete', reservation_id=reservation.id) }}">
+          <button type="submit" value="asd" class="btn btn-danger"> <i class="fa fa-trash"> </i> </button>
+        </form>  
+      </div>
+    </div>
+  </div>
+
   {% endfor %}
 
   <div> {{ count }} varausta</div>
