--- a/application/templates/reservations/list.html
+++ b/application/templates/reservations/list.html
@@ -8,6 +8,8 @@
       {{ reservation.date.strftime('%d.%m.') }} klo {{ reservation.hour }}-{{ reservation.hour + 1 }}, varaaja {{ reservation.household }}
     </div>
 
+
+    {% if reservation.date in date %}
     <div class="col-12">
       <div class="col-1 reseravation-action-row">
         <a href="{{ url_for('reservations_edit', reservation_id=reservation.id) }}">
@@ -16,10 +18,12 @@
 
 
         <form method="POST" action="{{ url_for('reservations_delete', reservation_id=reservation.id) }}">
-          <button type="submit" value="asd" class="btn btn-danger"> <i class="fa fa-trash"> </i> </button>
+          <button type="submit" value="asd" class="btn btn-danger"> <i class="fa fa-trash"></i> </button>
         </form>  
       </div>
     </div>
+
+    {% endif %}
   </div>
 
   {% endfor %}
