ulkoasun viilausta ja varausten järjestelyä

--- a/application/templates/auth/loginform.html
+++ b/application/templates/auth/loginform.html
@@ -3,27 +3,19 @@
 {% block body %}
 {{ error }}
 <form method="POST" action="{{ url_for('auth_login') }}">
-  <table>
-    <tr>
-      <td>
-	    {{ form.username.label }}
-      </td>
-      <td>
-	    {{ form.username }}
-      </td>
-    </tr>
-    <tr>
-      <td>
-	    {{ form.password.label }}
-      </td>
-      <td>
-	    {{ form.password }}
-      </td>
-    </tr>
-    <tr>
-      <td colspan="2">
-	    <input type="submit" value="Kirjaudu"/>
-      </td>
-    </tr>
+  <div class="form-group">
+
+    <label for="username">Käyttäjätunnus</label>
+    <input type="text" name="username" class="form-control" id="username" placeholder="Kirjoita käyttäjätunnus">
+  </div>
+  <div>
+    <label for="password">Salasana</label>
+    <input type="password" name="password" class="form-control" id="password" placeholder="Salasana">
+  </div>
+  <button type="submit" class="btn btn-primary">Kirjaudu</button>
 </form>
 {% endblock %}
+
+
+
+
