--- a/application/templates/auth/registerform.html
+++ b/application/templates/auth/registerform.html
@@ -47,7 +47,7 @@
         </tr>
         <tr>
             <td colspan="2">
-                <input type="submit" value="Rekisteröidy" />
+                <input type="submit" class="btn btn-primary" value="Rekisteröidy" />
             </td>
         </tr>
     </form>
