--- a/application/templates/reservations/list.html
+++ b/application/templates/reservations/list.html
@@ -2,30 +2,34 @@
 
 {% block body %}
   <h3>Varaukset</h3>
-  {% for reservation in reservations %}
+  {% for day in days_sorted %}
   <div class="row reservation-list-row">
     <div class="col-12">
-      {{ reservation.date.strftime('%d.%m.') }} klo {{ reservation.hour }}-{{ reservation.hour + 1 }}, varaaja {{ reservation.household }}
+      {{ day }}
     </div>
 
-
-    {% if reservation.date in date %}
+    {% for reservation in days[day] %}
     <div class="col-12">
-      <div class="col-1 reseravation-action-row">
-        <a href="{{ url_for('reservations_edit', reservation_id=reservation.id) }}">
-          <i class="fas fa-pencil-alt fa-2x"></i>
-        </a> 
-
-
-        <form method="POST" action="{{ url_for('reservations_delete', reservation_id=reservation.id) }}">
-          <button type="submit" value="asd" class="btn btn-danger"> <i class="fa fa-trash"></i> </button>
-        </form>  
-      </div>
+      {{ reservation.string }}
     </div>
+    
+      {% if day in dates %}
+      <div class="col-12">
+        <div class="col-1 reseravation-action-row">
+          <a href="{{ url_for('reservations_edit', reservation_id=reservation.id) }}">
+            <i class="fas fa-pencil-alt fa-2x"></i>
+          </a> 
 
-    {% endif %}
+
+          <form method="POST" action="{{ url_for('reservations_delete', reservation_id=reservation.id) }}">
+            <button type="submit" class="btn btn-danger"> <i class="fa fa-trash"></i> </button>
+          </form>  
+        </div>
+      </div>
+
+      {% endif %}
+      {% endfor %}
   </div>
-
   {% endfor %}
 
   <div> {{ count }} varausta</div>
