--- a/application/templates/reservations/list.html
+++ b/application/templates/reservations/list.html
@@ -2,10 +2,10 @@
 
 {% block body %}
   <h3>Varaukset</h3>
-  {% for day in days_sorted %}
+  {% for day in days_sorted %}  
   <div class="row reservation-list-row">
     <div class="col-12">
-      {{ day }}
+      <font size="5">{{ day }}</font>
     </div>
 
     {% for reservation in days[day] %}
@@ -15,7 +15,7 @@
     
       {% if day in dates %}
       <div class="col-12">
-        <div class="col-1 reseravation-action-row">
+        <div class="reseravation-action-row">
           <a href="{{ url_for('reservations_edit', reservation_id=reservation.id) }}">
             <i class="fas fa-pencil-alt fa-2x"></i>
           </a> 
